--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
+ margin: 0;
   padding: 0;
-  font-family: 'Georgia', serif;
+  font-family: 'Lora', serif;
   background-image: url("fondo.jpg");
   background-size: cover;
   background-attachment: fixed;
@@ -20,8 +20,19 @@ header img {
 }
 
 h1, h2 {
-  color: gold;
+ont-family: 'Cinzel', serif;
+  font-weight: 700;
   text-align: center;
+  color: #FFD700;
+}
+
+p {
+  font-family: 'Lora', serif;
+  font-size: 17px;
+  text-align: center;
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 section {
