--- a/style.css
+++ b/style.css
@@ -101,3 +101,11 @@ h2 {
 p {
   font-size: 19px;
 }
+
+.videos {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
