--- a/style.css
+++ b/style.css
@@ -205,5 +205,11 @@ p {
   transform: scale(1.05);
 }
 
-
+.galeria-productos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px 0;
+}
 
