--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ p {
 
 .galeria-videos video {
   width: 250px;
-  height: 250px;
+  height: auto;
   border: 2px solid gold;
   border-radius: 10px;
   box-shadow: 0 0 10px gold;
