--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ p {
 .seccion-info p {
   font-size: 18px;
   line-height: 1.6;
-  color: #fffbea;
+  color: #ffd700;
   text-shadow: 1px 1px 2px #000;
 }
 
