--- a/style.css
+++ b/style.css
@@ -222,7 +222,12 @@ p {
   box-shadow: 0 0 8px rgba(255, 215, 0, 0.4);
   background-color: white;
 }
+/* Efecto zoom */
+.producto:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px gold;
 
+}
 .mensaje-emprendedores {
   background-color: #111;
   color: gold;
