--- a/style.css
+++ b/style.css
@@ -368,3 +368,12 @@ p {
   transform: scale(1.15);
   box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
 }
+.logo-animado {
+  width: 150px;
+  animation: girarLogo 5s linear infinite;
+}
+
+@keyframes girarLogo {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
