--- a/style.css
+++ b/style.css
@@ -408,3 +408,21 @@ nav a.activo {
     color: black;
     font-weight: bold;
 }
+.sub-menu {
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  padding: 10px;
+}
+
+.sub-menu a {
+  margin: 0 15px;
+  color: gold;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 16px;
+  transition: color 0.3s;
+}
+
+.sub-menu a:hover {
+  color: white;
+}
