--- a/style.css
+++ b/style.css
@@ -426,3 +426,31 @@ nav a.activo {
 .sub-menu a:hover {
   color: white;
 }
+.galeria-productos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.producto {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+  background-color: #111;
+}
+
+.producto img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.producto:hover {
+  transform: scale(1.05);
+}
