--- a/style.css
+++ b/style.css
@@ -454,3 +454,33 @@ nav a.activo {
 .producto:hover {
   transform: scale(1.05);
 }
+.galeria {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.galeria a {
+  display: block;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  background-color: #111;
+  transition: transform 0.3s;
+}
+
+.galeria img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.galeria a:hover img {
+  transform: scale(1.1);
+}
