--- a/style.css
+++ b/style.css
@@ -1158,6 +1158,30 @@ nav a:hover {
 .seccion-info a:hover {
   color: white;
 }
+.mensaje-emprendedores {
+  background-color: #111;
+  color: gold;
+  padding: 30px 20px;
+  text-align: center;
+  border-top: 2px solid gold;
+  border-bottom: 2px solid gold;
+}
 
+.mensaje-emprendedores h2 {
+  color: gold;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.mensaje-emprendedores p {
+  color: gold;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.mensaje-emprendedores strong {
+  color: gold;
+}
 
 
